# DeCoder

./: .dockerignore  .env.example  .gitattributes  .gitignore  DockerFile.1  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: main.yml
app/: database.py  dependencies.py  main.py
app/api/v1/endpoints/: auth.py  problem.py  user.py
app/core/: config.py  logging.yaml  logging_config.py  security.py  settings_logging.yaml
app/frontend/static/: style.css
app/frontend/templates/: base.html  home.html  index.html  login.html  problems.html  profile.html  register.html  twosum.html
app/models/: __init__.py  base.py  language.py  problem.py  submission.py  user.py
app/shemas/: problem.py  token.py  user.py
logs/: app.json  security.json
migrations/: env.py
migrations/versions/: 2b0fd7f69023_initial_migration.py
tests/: conftest.py  test_auth.py  test_main.py
